// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BadgeSpec should render Badge 1`] = `
<div
  className="tc-badge tc-badge-readonly"
  style={undefined}
>
  <button
    className="tc-badge-button"
    disabled={false}
    id={undefined}
    onClick={undefined}
  >
    <span
      className="tc-badge-label"
    >
      Label
    </span>
  </button>
</div>
`;

exports[`BadgeSpec should render Badge with category and delete icon 1`] = `
<div
  className="tc-badge"
  style={undefined}
>
  <button
    className="tc-badge-button"
    disabled={false}
    id={undefined}
    onClick={undefined}
  >
    <span
      className="tc-badge-category"
    >
      Category
    </span>
    <span
      className="tc-badge-label"
    >
      Label
    </span>
  </button>
  <button
    className="tc-badge-delete-icon btn btn-default"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;

exports[`BadgeSpec should render Badge with delete icon 1`] = `
<div
  className="tc-badge"
  style={undefined}
>
  <button
    className="tc-badge-button"
    disabled={false}
    id={undefined}
    onClick={undefined}
  >
    <span
      className="tc-badge-label"
    >
      Label
    </span>
  </button>
  <button
    className="tc-badge-delete-icon btn btn-default"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;

exports[`BadgeSpec should render disabled Badge with delete icon 1`] = `
<div
  className="tc-badge tc-badge-disabled"
  style={undefined}
>
  <button
    className="tc-badge-button"
    disabled={true}
    id={undefined}
    onClick={undefined}
  >
    <span
      className="tc-badge-label"
    >
      Label
    </span>
  </button>
  <button
    className="tc-badge-delete-icon btn btn-default"
    disabled={true}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;

exports[`BadgeSpec should render selected Badge with delete icon 1`] = `
<div
  className="tc-badge tc-badge-selected"
  style={undefined}
>
  <button
    className="tc-badge-button"
    disabled={false}
    id={undefined}
    onClick={undefined}
  >
    <span
      className="tc-badge-label"
    >
      Label
    </span>
  </button>
  <button
    className="tc-badge-delete-icon btn btn-default"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role={null}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</div>
`;
